--- a/style.css
+++ b/style.css
@@ -24,6 +24,15 @@ input {
   font-size: 16px;
 }
 
+.input-group {
+  display: flex;
+  flex-direction: column;
+  gap:10px;
+  margin-bottom: 20px;
+}
+
+
+
 button {
   padding: 12px;
   margin: 10px 0;
